-Wordwrap fix

--- a/assets/sass/druletta.scss
+++ b/assets/sass/druletta.scss
@@ -790,6 +790,7 @@ img.image-style-slidersize {
   line-height: 29px;
   padding-top: 4px;
   color: #616169;
+  word-wrap: break-word;
 }
 
 /*** for mobile ***/
