--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -6284,7 +6284,7 @@ img.image-style-slidersize {
   margin: 0;
   padding: 40px 60px 50px 60px; }
 
-.blog-post, .entry-title {
+.blog-post .entry-title {
   font-size: 38px;
   letter-spacing: -0.4px; }
 
@@ -6495,7 +6495,8 @@ img.image-style-slidersize {
   font-size: 14px;
   line-height: 29px;
   padding-top: 4px;
-  color: #616169; }
+  color: #616169;
+  word-wrap: break-word; }
 
 /*** for mobile ***/
 @media (max-width: 768px) {
